# tracking_trajectory

./: CMakeLists.txt  README.md  package.xml
config/: camera.yml  corridor.rviz  frontcamera.yml  mv_25001173.yml  real_vis.rviz  test_estimator.rviz  tracking_trajectory_generator.yaml  tracking_trajectory_generator_real (copy).yaml  tracking_trajectory_generator_real.yaml  visualization.rviz  waypoints_trajectory_generator.yaml
launch/: exp_tag_without_obstacle.launch  simulated_quadrotor.launch  simulation.launch  tag_tracker.launch  tag_tracker_vis.launch  test_estimator.launch  test_laser_scan.launch  test_param.launch  test_tag_detector.launch  tracker.launch  tracking_trajectory_generator.launch  waypoints_trajectory_generator.launch
src/: macro.h  mosek.h  obstacle_generator_node.cpp  octomap.cpp  octomap.h  simulated_commander_node.cpp  simulated_laser_naive_node.cpp  simulated_sensor_node.cpp  tag_detector_node.cpp  target_trajectory_estimator.h  test_estimator.cpp  tracking_trajectory_generator_node.cpp  traj_utils.h  trajectory_generator.h  trajectory_generator_fast.cpp  trajectory_server_node.cpp  voxel_graph.cpp  voxel_graph.h  voxelmacro.h
